--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,13 @@
-<h1 class="text-2xl semibold">Welcome to Kickoff Tailwind!</h1>
-<p class="lead">Use this starting point as a way to quickly set up a new project by generating files, installing gems, and more.</p>
+<main>
+    <section data-index="0" class="min-h-screen home">
+        <h2 class="text-2xl font-semibold">Home</h2>
+    </section>
+    
+    <section data-index="1" class="min-h-screen projects">
+        <h2 class="text-2xl font-semibold">Projects</h2>
+    </section>
+    
+    <section data-index="2" class="min-h-screen contact">
+        <h2 class="text-2xl font-semibold">Contact</h2>
+    </section>
+</main>
