--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= render "shared/flash_notice" %>
     <%= render "shared/header" %>
 
-    <main class="px-4 lg:px-10">
+    <main class="px-5 md:px-10 lg:px-20">
       <%= content_for?(:content) ? yield(:content) : yield %>
     </main>
   </body>
