--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,11 +4,77 @@
 /*! purgecss start ignore */
 @import "components/buttons";
 @import "components/forms";
+@import "components/tabs";
 /*! purgecss end ignore */
 
 @tailwind utilities;
-
+@import 'trix/dist/trix.css';
+.test {
+    position: sticky;
+    bottom: 0;
+}
 header {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
-    position: sticky;
+}
+.nav {
+    background: #E0EAFC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(left, #CFDEF3, #E0EAFC);
+    background: -moz-linear-gradient(left, #CFDEF3, #E0EAFC);
+    background: -o-linear-gradient(left, #CFDEF3, #E0EAFC);
+    background: linear-gradient(to right, #CFDEF3, #E0EAFC); 
+}
+.header-name {
+    background: #373B44;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(bottom, #4286f4, #373B44);
+    background: -moz-linear-gradient(bottom, #4286f4, #373B44);
+    background: -o-linear-gradient(bottom, #4286f4, #373B44);
+    background: linear-gradient(to top, #4286f4, #373B44);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.pill {
+    position: absolute;
+    transform: scale(2);
+    transition: all 0.5s ease;
+    border-radius: 5%;
+    
+    background-color: #D9AFD9;
+    background-image: -webkit-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
+    background-image: -moz-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
+    background-image: -o-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
+    background-image: linear-gradient(to top, #D9AFD9 0%, #97D9E1 100%);
+}
+.heading-gradient {
+    background: #606c88;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(left, #3f4c6b, #606c88);
+    background: -moz-linear-gradient(left, #3f4c6b, #606c88);
+    background: -o-linear-gradient(left, #3f4c6b, #606c88);
+    background: linear-gradient(to right, #3f4c6b, #606c88);  
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.styled-btn {
+    border: 2px solid #3f4c6b;
+    color: #3f4c6b;
+}
+.home {
+    background-color: #D9AFD9;
+    background-image: -webkit-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
+    background-image: -moz-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
+    background-image: -o-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
+    background-image: linear-gradient(to top, #D9AFD9 0%, #97D9E1 100%);
+}
+.projects {
+    background-color: #F4D03F;
+    background-image: -webkit-linear-gradient(bottom, #F4D03F 0%, #D9AFD9 100%);
+    background-image: -moz-linear-gradient(bottom, #F4D03F 0%, #D9AFD9 100%);
+    background-image: -o-linear-gradient(bottom, #F4D03F 0%, #D9AFD9 100%);
+    background-image: linear-gradient(to top, #F4D03F 0%, #D9AFD9 100%);
+}
+.contact {
+    background-color: #16A085;
+    background-image: -webkit-linear-gradient(bottom, #16A085 0%, #F4D03F 100%);
+    background-image: -moz-linear-gradient(bottom, #16A085 0%, #F4D03F 100%);
+    background-image: -o-linear-gradient(bottom, #16A085 0%, #F4D03F 100%);
+    background-image: linear-gradient(to top, #16A085 0%, #F4D03F 100%);
 }
