--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -10,7 +10,8 @@
   <%= csp_meta_tag %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
+  <%= favicon_link_tag asset_path('favicon.png') %>
   <%= stylesheet_link_tag  'application', media: 'all' %>
   <%= stylesheet_pack_tag  'application', media: 'all' %>
   <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
