--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,17 +5,17 @@
     </div>
     <ul class="flex flex-row justify-around items-stretch flex-grow nav-links lg:px-10 py-4">
       <li class="flex flex-col justify-center">
-        <%= link_to "#home", data: { page: "home" }, class: "font-bold leading-tight z-30" do %>
+        <%= link_to "#home", data: { page: "home" }, class: "font-bold leading-tight z-30 styled-link" do %>
           Home
         <% end %>
       </li>
       <li class="flex flex-col justify-center">
-        <%= link_to "#projects", data: { page: "projects" }, class: "font-bold leading-tight z-30 nav-link" do %>
+        <%= link_to "#projects", data: { page: "projects" }, class: "font-bold leading-tight z-30 styled-link" do %>
           Projects
         <% end %>
       </li>
       <li class="flex flex-col justify-center">
-        <%= link_to "#contact", data: { page: "contact" }, class: "font-bold leading-tight z-30" do %>
+        <%= link_to "#contact", data: { page: "contact" }, class: "font-bold leading-tight z-30 styled-link" do %>
           Contact
         <% end %>
       </li>
