--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,9 +9,10 @@
 
 @tailwind utilities;
 @import 'trix/dist/trix.css';
-.test {
-    position: sticky;
-    bottom: 0;
+button {
+    &:focus {
+        outline: none;
+    }
 }
 header {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
@@ -57,6 +58,45 @@ header {
     border: 2px solid #3f4c6b;
     color: #3f4c6b;
 }
+.styled-link {
+    position: relative;
+}
+
+.styled-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: currentColor;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 250ms ease-in;
+}
+.styled-link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.styled-link-vertical::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin-left: -3px;
+    width: 2px;
+    height: 61%;
+    background: #3f4c6b;
+    transform: scaleY(0);
+    transform-origin: right;
+    transition: transform 250ms ease-in;
+}
+.styled-link-vertical:hover::before {
+    transform: scaleY(1);
+    transform-origin: left;
+}
+
 .home {
     background-color: #D9AFD9;
     background-image: -webkit-linear-gradient(bottom, #D9AFD9 0%, #97D9E1 100%);
