--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="sticky top-0 z-0">
-  <nav class="flex flex-row items-center text-blue-900 px-5 md:px-10 lg:px-20 nav">
-    <div>
-      <h1 class="text-4xl font-bold header-name leading-tight pb-4 pt-2">Alistair Divorty</h1>
+  <nav class="flex flex-col w-full md:flex-row items-stretch md:items-center text-blue-900 px-5 md:px-10 lg:px-20 l-blue-gradient">
+    <div class="self-center md:self-auto">
+      <h1 class="text-4xl font-bold header-name leading-tight md:pb-4 pt-2">Alistair Divorty</h1>
     </div>
     <ul class="flex flex-row justify-around items-stretch flex-grow nav-links lg:px-10 py-4">
       <li class="flex flex-col justify-center">
