--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,8 @@
     </div>
 </section>
 
-<section id="projects" data-index="1" class="min-h-screen pt-10 px-12 md:px-10 lg:px-20 projects">
+<section id="projects" data-index="1" class="min-h-screen px-12 md:px-10 lg:px-20 projects">
+    <div class="h-24"></div>
     <div class="flex flex-row justify-center">
         <h2 class="text-4xl font-bold text-blue-800">Projects</h2>
     </div>
@@ -62,18 +63,20 @@
                 </div>
             
                 <div id="project-1-mobile" style="height: 424px" class="tab-panel overflow-y-scroll">
-                   
                     <%= link_to "#" do %>
                         <%= image_tag "word-frequency-comparator-mobile.png", alt: "Word Frequency Comparator", class: "w-1/2 max-w-full overflow-y-scroll mx-auto" %>
                     <% end %>
-                   
                 </div>
             
                 <div id="project-1-info" class="tab-panel font-medium text-xs leading-tight p-2 l-blue-gradient">
-                    <p class="pb-1">A single-page web application for comparing average word frequencies across folders of documents in order to 
+                    <p class="mb-1">A single-page web application for comparing average word frequencies across folders of documents in order to 
                     facilitate empirical analysis, built using Rails 6, JavaScript and PostgreSQL.</p>
                     <p>Once a folder has been created, the user can populate it with documents by uploading a file in PDF format, or providing the URL
-                    for a webpage from which the text of the document will be scraped. The user initiates a comparison by selecting an arbitrary number
+                    for a webpage from which the text of the document will be scraped. A method in the Document model validates the format of the uploaded
+                    file by examining the Content-Type entity header. Further validations ensure the presence of a document title and
+                    the presence of either a PDF file or a URL. The application utilizes Ajax to dynamically render newly created database records
+                    or errors thrown by the model validations without needing fetch the full page data from the server.<p>
+                    <p class="mb-1">The user initiates a comparison by selecting an arbitrary number
                     of folders from the library they have created and inputting a search term. The application computes and visualizes the average frequency
                     with which the search term appears in the documents contained in each folder.</p>
                 </div>
@@ -104,19 +107,38 @@
                     </li>
                 </ul>
             </nav>
-            <div id="project-2-panels" class="bg-white">
+            <div id="project-2-panels" class="bg-transparent">
                 <div id="project-2-desktop" class="tab-panel active">
-                    <a href="https://placeholder.com" style="max-width: 100%">
-                        <img src="https://via.placeholder.com/700x500.png?text=Desktop" style="max-width: 100%">
-                    </a>
+                    <%= link_to "#" do %>
+                        <%= image_tag "recipe-reaction-reporter-full.png", alt: "Recipe Reaction Reporter", class: "max-w-full" %>
+                    <% end %>
                 </div>
             <div class="bg-white">
                 <div id="project-2-mobile" class="tab-panel">
                     Mobile
                 </div>
                 </div>
-                <div id="project-2-info" class="tab-panel">
-                    Info
+                <div id="project-2-info" class="tab-panel font-medium text-xs leading-tight p-2 l-blue-gradient">
+                    <p class="mb-1">A web application that allows visitors to browse and contribute to an open database of recipes, and provides 
+                    logged-in users with the ability to report their reactions to recipes.</p>
+                    <p class="mb-1">The landing page features a call-to-action button that toggles a modal containing a registration form,
+                    and a further call-to-action button that redirects the user to the paginated index of available recipes. Subtle
+                    animations are achieved by means of React hooks and the GSAP library.</p>
+                    <p class="mb-1">Visitors can access the form for uploading a recipe of their own by following the link in the Navbar.
+                    The form accomodates an arbitrary number of ingredients by dynamically adding a text input field every time the
+                    Add Ingredient button is clicked. On the server side, the controller for the New Recipe action parses the form data sent 
+                    via the Fetch API and uploads the image provided by the user to a separate hosting platform, storing the URL necessary for 
+                    retrieval in the database.</p>
+                    <p class="mb-1">When components are mounted, a method in the App component makes a request to the Sessions controller in order to
+                    determine whether the user has been authenticated, and passes the loggedInStatus as props to the Navbar component, which
+                    displays either a Login or Logout button depending on the response from the server.
+                    <p class="mb-1">The Login button allows non-authenticated users to authenticate themselves at any time by toggling a modal containing
+                    a login form. Only authenticated users can access the form for reporting a reaction to a recipe by clicking the button
+                    in the view for individual recipes. New reactions are dynamically prepended to the list of reactions for the recipe 
+                    currently being viewed.</p>
+                    <p>When the user, after having viewed the details of an individual recipe, returns to the paginated list of recipes, they are
+                    presented with the page that they were previously browsing. This is achieved by lifitng the state of the Recipe component
+                    up to the App component by means of callback functions.</p>
                 </div>
             </div>
         </div> <!-- end of project 2 -->
